--- a/password_generator_project/generator/templates/generator/home.html
+++ b/password_generator_project/generator/templates/generator/home.html
@@ -1,3 +1,23 @@
-Hello it is html file
+<h1> Password Generator </h1>
 
-{{ password }}
+<form action="{% url 'password' %}">
+    <select name="length">
+        <option value="6"> 6 char long </option>
+        <option value="7"> 7 char long </option>
+        <option value="8" selected="selected"> 8 char long </option>
+        <option value="9"> 9 char long </option>
+        <option value="10"> 10 char long </option>
+        <option value="11"> 11 char long </option>
+        <option value="12"> 12 char long </option>
+        <option value="13"> 13 char long </option>
+        <option value="14"> 14 char long </option>
+    </select>
+    <br>
+    <input type="checkbox" name="uppercase"> Uppercase
+    <br>
+    <input type="checkbox" name="numbers"> Numbers
+    <br>
+    <input type="checkbox" name="special"> Special Characters
+    <br>
+    <input type="submit" value="Generate Password">
+</form>
