update password-generator. Connect bootstrap. add new page: -about

--- a/password_generator_project/generator/templates/generator/about.html
+++ b/password_generator_project/generator/templates/generator/about.html
@@ -2,7 +2,7 @@
       rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 <div class="container text-center">
-    <h1>Your password is:</h1>
-    <h2 class="alert alert-success">{{ password }}</h2>
+    <h1>Описание сайта</h1>
+    <p>Эту страницу создал Максим Булавский</p>
     <a href="{% url 'home' %}" class="btn btn-warning">Домой</a>
-</div>
+</div>>
