--- a/password_generator_project/generator/templates/generator/home.html
+++ b/password_generator_project/generator/templates/generator/home.html
@@ -1,17 +1,21 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+<div class="container text-center">
 <h1> Password Generator </h1>
 
 <form action="{% url 'password' %}">
     <select name="length">
-        <option value="6"> 6 char long </option>
-        <option value="7"> 7 char long </option>
-        <option value="8" selected="selected"> 8 char long </option>
-        <option value="9"> 9 char long </option>
-        <option value="10"> 10 char long </option>
-        <option value="11"> 11 char long </option>
-        <option value="12"> 12 char long </option>
-        <option value="13"> 13 char long </option>
-        <option value="14"> 14 char long </option>
-    </select>
+        <option value="6"> 6 </option>
+        <option value="7"> 7 </option>
+        <option value="8"> 8 </option>
+        <option value="9"> 9 </option>
+        <option value="10"> 10 </option>
+        <option value="11"> 11 </option>
+        <option value="12"> 12 </option>
+        <option value="13"> 13 </option>
+        <option value="14"> 14 </option>
+    </select> Длина пароля
     <br>
     <input type="checkbox" name="uppercase"> Uppercase
     <br>
@@ -19,5 +23,8 @@
     <br>
     <input type="checkbox" name="special"> Special Characters
     <br>
-    <input type="submit" value="Generate Password">
+    <input type="submit" value="Generate Password" class="btn btn-primary">
+    <br>
+    <a href="{% url 'about'%}">О сайте</a>
 </form>
+</div>
